--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: i_am_poor
 description: A new Flutter project.
-publish_to: 'none'
 
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
-
+  sdk: ">=2.18.6 <3.0.0"
 
 dependencies:
   flutter:
@@ -21,10 +20,8 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
 
-
 flutter:
-
   uses-material-design: true
 
-   assets:
-     - images/
+  assets:
+    - images/
